align picture and keyborad, fix positiong >= 900px

--- a/style.css
+++ b/style.css
@@ -19,9 +19,14 @@ body, html{
     margin: 20px;
 }
 
+#game{
+    margin-bottom: 50px;
+}
 #picture{
-    margin: auto;
+    margin: 0 auto;
     text-align: center;
+    line-height: 0px;
+    height: 290px;
 }
 
 #picture img{
@@ -31,7 +36,7 @@ body, html{
 
 #keyboard{
     width: 450px;
-    margin: auto;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -62,12 +67,37 @@ body, html{
 
 @media only screen and (min-width: 900px){
     #game{
+        height: 350px;
         display: flex;
-        justify-content: center;
-        align-content: baseline;
+        justify-content: space-between;
+        align-items: flex-start;
+        /* border: 1px solid red; */
     }
     #keyboard, #picture{
 
+        /* border: 1px solid red; */
+    }
+    #picture{
+        line-height: 30px;
+    }
+    #keyboard{
+        height: 300px;
+    }
+}
+
+@media only screen and (min-width: 1000px)
+{
+    #game{
+        display: flex;
+    }
+    /* #keyboard, #picture{
+
         border: 1px solid red;
+    } */
+    #keyboard{
+        margin-left: 30px;
+    }
+    #picture{
+        margin-right: 30px;
     }
 }
